--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.6"
+    "@astrojs/image": "^0.17.3",
+    "@astrojs/tailwind": "^4.0.0",
+    "@fontsource/dm-sans": "^5.0.9",
+    "astro": "^2.10.6",
+    "tailwindcss": "^3.3.3"
   }
 }
