--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^4.0.0",
     "@fontsource/dm-sans": "^5.0.9",
     "astro": "^2.10.6",
+    "sharp": "^0.32.5",
     "tailwindcss": "^3.3.3"
   }
 }
